# web/cards.go
@@ -1,6 +1,7 @@
 package web
 
 import (
+	"encoding/json"
 	"log"
 	"net/http"
 	"sort"
@@ -11,36 +12,65 @@ import (
 
 func (app *Application) handleCards(w http.ResponseWriter, r *http.Request) {
 	var input struct {
-		Name   string
-		Number string
-		Set    string
-		Rarity string
+		Name   *string
+		Number *string
+		Set    *string
+		Rarity *string
+		Type   *string
+		Color  *string
+		Trait  *string
+		Effect *string
+		Level  *int
+		Cost   *int
+		DP     *int
 
-		Sort string
+		Sort *string
 
-		Page int
-		Size int
+		Page *int
+		Size *int
 	}
 
 	v := NewValidator()
 	qs := r.URL.Query()
 
-	input.Name = readString(qs, "name", "")
-	input.Number = readString(qs, "number", "")
-	input.Set = readString(qs, "set", "")
-	input.Rarity = readString(qs, "rarity", "")
+	// read all various filter options
+	input.Name = readString(qs, "name")
+	input.Number = readString(qs, "number")
+	input.Set = readString(qs, "set")
+	input.Rarity = readString(qs, "rarity")
+	input.Type = readString(qs, "type")
+	input.Color = readString(qs, "color")
+	input.Trait = readString(qs, "trait")
+	input.Effect = readString(qs, "effect")
+	input.Level = readInt(qs, "level", v)
+	input.Cost = readInt(qs, "cost", v)
+	input.DP = readInt(qs, "dp", v)
 
-	input.Sort = readString(qs, "sort", "number")
+	// read sorting order
+	input.Sort = readString(qs, "sort")
+	if input.Sort == nil {
+		s := "number"
+		input.Sort = &s
+	}
 
-	input.Page = readInt(qs, "page", 1, v)
-	input.Size = readInt(qs, "size", 20, v)
+	// read pagination params
+	input.Page = readInt(qs, "page", v)
+	if input.Page == nil {
+		i := 1
+		input.Page = &i
+	}
+	input.Size = readInt(qs, "size", v)
+	if input.Size == nil {
+		i := 20
+		input.Size = &i
+	}
 
 	validSorts := []string{"name", "-name", "number", "-number"}
-	v.Check(v.In(input.Sort, validSorts...), "sort", "invalid sort value")
+	v.Check(v.In(*input.Sort, validSorts...), "sort", "invalid sort value")
 
-	v.Check(input.Page > 0, "page", "must be greater than zero")
-	v.Check(input.Size > 0, "size", "must be greater than zero")
-	v.Check(input.Size <= 100, "size", "must be a maximum of 100")
+	v.Check(*input.Page > 0, "page", "must be greater than zero")
+	v.Check(*input.Size > 0, "size", "must be greater than zero")
+	v.Check(*input.Size <= 100, "size", "must be a maximum of 100")
 
 	if !v.Valid() {
 		failedValidationResponse(w, r, v.Errors)
@@ -51,26 +81,73 @@ func (app *Application) handleCards(w http.ResponseWriter, r *http.Request) {
 
 	// apply filtering
 	for _, card := range app.cards {
-		if input.Name != "" {
-			if !strings.Contains(strings.ToLower(card.Name), strings.ToLower(input.Name)) {
+		if input.Name != nil {
+			if !contains(card.Name, *input.Name) {
 				continue
 			}
 		}
 
-		if input.Number != "" {
-			if strings.ToLower(card.Number) != strings.ToLower(input.Number) {
+		if input.Number != nil {
+			if !equals(card.Number, *input.Number) {
 				continue
 			}
 		}
 
-		if input.Set != "" {
-			if strings.ToLower(card.Set) != strings.ToLower(input.Set) {
+		if input.Set != nil {
+			if !equals(card.Set, *input.Set) {
 				continue
 			}
 		}
 
-		if input.Rarity != "" {
-			if strings.ToLower(card.Rarity) != strings.ToLower(input.Rarity) {
+		if input.Rarity != nil {
+			if !equals(card.Rarity, *input.Rarity) {
+				continue
+			}
+		}
+
+		if input.Type != nil {
+			if !equals(card.Type, *input.Type) {
+				continue
+			}
+		}
+
+		if input.Color != nil {
+			if !anyEquals(card.Colors, *input.Color) {
+				continue
+			}
+		}
+
+		if input.Trait != nil {
+			if !contains(card.Form, *input.Trait) &&
+				!anyContains(card.Attributes, *input.Trait) &&
+				!anyContains(card.Types, *input.Trait) {
+				continue
+			}
+		}
+
+		if input.Effect != nil {
+			if !anyContains(card.Effects, *input.Effect) &&
+				!anyContains(card.InheritedEffects, *input.Effect) &&
+				!anyContains(card.SecurityEffects, *input.Effect) {
+				continue
+			}
+		}
+
+		if input.Level != nil {
+			if !equalsNumber(card.Level, *input.Level) {
+				continue
+			}
+		}
+
+		if input.Cost != nil {
+			if !equalsNumber(card.Cost, *input.Cost) &&
+				!equalsNumber(card.PlayCost, *input.Cost) {
+				continue
+			}
+		}
+
+		if input.DP != nil {
+			if !equalsNumber(card.DP, *input.DP) {
 				continue
 			}
 		}
@@ -79,7 +156,7 @@ func (app *Application) handleCards(w http.ResponseWriter, r *http.Request) {
 	}
 
 	// apply sorting
-	switch input.Sort {
+	switch *input.Sort {
 	case "name":
 		sort.Slice(cards, func(i, j int) bool {
 			return cards[i].Name < cards[j].Name
@@ -99,13 +176,13 @@ func (app *Application) handleCards(w http.ResponseWriter, r *http.Request) {
 	}
 
 	// apply pagination
-	start := (input.Page - 1) * input.Size
+	start := (*input.Page - 1) * *input.Size
 	if start >= len(cards) {
 		cards = []model.Card{}
 		start = 0
 	}
 
-	end := start + input.Size
+	end := start + *input.Size
 	if end > len(cards) {
 		end = len(cards)
 	}
@@ -120,4 +197,37 @@ func (app *Application) handleCards(w http.ResponseWriter, r *http.Request) {
 		http.Error(w, http.StatusText(code), code)
 		return
 	}
+}
+
+func equals(a, b string) bool {
+	return strings.ToLower(a) == strings.ToLower(b)
+}
+
+func anyEquals(a []string, b string) bool {
+	for _, aa := range a {
+		if equals(aa, b) {
+			return true
+		}
+	}
+
+	return false
+}
+
+func contains(a, b string) bool {
+	return strings.Contains(strings.ToLower(a), strings.ToLower(b))
+}
+
+func anyContains(a []string, b string) bool {
+	for _, aa := range a {
+		if contains(aa, b) {
+			return true
+		}
+	}
+
+	return false
+}
+
+func equalsNumber(a json.Number, b int) bool {
+	i, _ := a.Int64()
+	return int(i) == b
 }
